# sentry-mcp-rs

./: .env.example  ANNOUNCEMENT.md  Cargo.toml  README.md  glama.json  mise.toml  run.sh
.github/workflows/: release.yml  rust.yml
src/: api_client.rs  json_ext.rs  lib.rs  main.rs
src/tools/: get_issue_details.rs  get_trace_details.rs  mod.rs  search_issue_events.rs
tests/: api_client_tests.rs  execute_tests.rs  get_issue_details_tests.rs  get_trace_details_tests.rs  search_issue_events_tests.rs
