[package]
name = "sentry-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "sentry_rs"
path = "src/lib.rs"

[[bin]]
name = "sentry-rs"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1"
schemars = "1"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
