[package]
name = "sentry-mcp"
version = "0.2.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/utapyngo/sentry-mcp-rs"
description = "A minimal MCP server for Sentry"
keywords = ["sentry", "mcp", "llm", "ai"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[lib]
name = "sentry_mcp"
path = "src/lib.rs"

[[bin]]
name = "sentry-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1"
schemars = "1"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"

[lints.clippy]
cognitive_complexity = "warn"
